[package]
name = "com-shim-macro"
description = "Macros for com-shim."
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
license = "MIT"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
