[package]
name = "com-shim-macro"
description = "Macros for com-shim."
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
repository = "https://github.com/lilopkins/com-shim-rs"
license = "MIT"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
