[package]
name = "com-shim-macro"
description = "Macros for com-shim."
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
repository = "https://github.com/lilopkins/com-shim-rs"
license = "MIT"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["parsing"] }
