[package]
name = "com-shim"
version = "0.2.2"
description = "Create safe Rusty shims for COM classes."
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com-shim-macro = "0.2.2"
windows = { version = "0.48.0", features = [ "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole" ] }
