[package]
name = "com-shim"
version.workspace = true
description = "Create safe Rusty shims for COM classes."
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
repository = "https://github.com/lilopkins/com-shim-rs"
license = "MIT"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com-shim-macro = { version = "0.4.0", path = "../com-shim-macro" }
tracing = "0.1.41"
windows = { version = "^0.61", features = [ "Win32_System_Variant", "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole" ] }
